# advanced_ml_project

./: .gitignore  README.md  pyproject.toml
artifacts/models/d128_L5/: test_results.json
artifacts/models/d128_L5/dynamic_piece_plane_seed1337/: metadata.json
artifacts/models/d128_L5/dynamic_piece_plane_seed42/: metadata.json
artifacts/models/d128_L5/dynamic_piece_plane_seed67/: metadata.json
artifacts/models/d128_L5/full_piece_plane_seed1337/: metadata.json
artifacts/models/d128_L5/full_piece_plane_seed42/: metadata.json
artifacts/models/d128_L5/full_piece_plane_seed67/: metadata.json
artifacts/models/d128_L5/piece_plane_seed1337/: metadata.json
artifacts/models/d128_L5/piece_plane_seed42/: best.pt  last.pt  metadata.json
evaluation/d128_L5/dynamic_piece_plane/: elo_results.json  results.json
evaluation/d128_L5/full_piece_plane/: elo_results.json
evaluation/d128_L5/piece_plane/: elo_results.json  results.json
src/chess/: __init__.py  base.py  sample_board.py  visualize.py
src/config/: data.py  encoder.py  model.py  paths.py  render.py  train.py
src/data/: README.md  dataset.py  loader.py  setup.py
src/encoders/: __init__.py  base.py  enriched_piece_plane.py  features.py  piece_plane.py  square_token.py
src/evaluate/: elo.py  evaluate.py  metrics.py  visualize.py
src/model/: input_stem.py  model.py
src/pipeline/: profile_training.py  train_piece_plane.py  train_square_token.py  tune_hparams.py
src/play/: __init__.py  __main__.py  bot.py  cli.py  game.py  gui.py  openings.py
src/train/: run.py  trainer.py
tests/: test_encoders.py
(+1 files in other folders)
